--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -18,3 +18,9 @@ body{
     @apply bg-slate-900 rounded-md
 
 }
+
+@layer components{
+    .bg-glass{
+        @apply  bg-clip-padding backdrop-filter backdrop-blur-md hover:bg-gray-600/10 border-gray-800 text-white;
+    }
+}
