--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,6 +21,6 @@ body{
 
 @layer components{
     .bg-glass{
-        @apply  bg-clip-padding backdrop-filter backdrop-blur-md hover:bg-gray-600/10 border-gray-800 text-white;
+        @apply  bg-clip-padding backdrop-filter backdrop-blur-md hover:bg-gray-600/10 border-gray-800 border text-white;
     }
 }
